# arc-reactor

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  index.html  justfile  rustfmt.toml
.github/actions/cargo-auto-publish/: action.yml
.github/workflows/: main.yml
examples/MVC/: Cargo.toml
examples/MVC/src/: main.rs
examples/MVC/src/controllers/: api_controller.rs  index_controller.rs  mod.rs
examples/MVC/src/helpers/: mod.rs
examples/MVC/src/helpers/database/: mod.rs  model.rs
examples/MVC/src/helpers/schema/: table.rs
examples/MVC/src/middlewares/: auth.rs
examples/MVC/src/models/: mod.rs  user.rs
examples/MVC/src/routes/: api.rs  mod.rs
examples/diesel_integration/: Cargo.toml
examples/diesel_integration/src/: db.rs  main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/middlewares/: Cargo.toml
examples/middlewares/src/: main.rs
examples/simple/: .lol.log.swp  Cargo.toml
examples/simple/src/: main.rs
examples/tls/: Cargo.toml
examples/tls/src/: main.rs
impl-service/: Cargo.toml
impl-service/src/: lib.rs
src/: AsyncServer.rs  AsyncService.rs  Reactors.rs  SetTimeout.rs  lib  lib.rs  main.rs  routing.rs
src/ArcCore/: Reactor.rs  Reactors.rs  handler.rs  mod.rs  reactor.rs  request.rs  response.rs
src/ArcProto/: convert.rs  error.rs  middleware.rs  mod.rs  router.rs  service.rs
src/ArcRouting/: mod.rs  routegroup.rs  router.rs  util.rs
src/contrib/: bodyParser.rs  body_parser.rs  fakeReactor.rs  fakereactor.rs  mod.rs  staticFileServer.rs
src/contrib/multipart/: filewrite.rs  mod.rs  parser.rs
src/contrib/query_parser/: merge.rs  mod.rs  parser.rs
src/core/: fakereactor.rs  filestream.rs  mod.rs  reactor.rs  request.rs  response.rs  rootservice.rs
src/core/file/: meta.rs  mod.rs  stream.rs  write.rs
src/proto/: convert.rs  error.rs  middleware.rs  mod.rs  service.rs
src/routing/: mod.rs  routegroup.rs  router.rs  util.rs
src/routing/recognizer/: mod.rs  nfa.rs
