[package]
name = "arc-reactor"
version = "0.1.7"
authors = ["seunlanlege <seunlanlege@gmail.com>"]
license ="MIT"
repository = "https://github.com/seunlanlege/arc-reactor"
readme = "README.md"
documentation="https://docs.rs/arc-reactor/~0.1"
description = "Minimal, Asynchronous, Web Framework"
keywords = ["web", "framework", "asynchronous", "futures", "http"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
impl-service = { path = "impl-service", version="0.1.3", optional=true }
tokio-core = "0.1"
serde_qs = "0.4"
hyper = "0.11"
num_cpus = "1.6.2"
anymap = "0.12.1"
serde_json = "1.0"
serde = "1.0"
percent-encoding = "1.0.1"
tokio-tls = "0.1"
native-tls = "0.1"
tokio="0.1.6"
flate2="1.0"
bytes="0.4"
mime="0.3"
regex = "0.2"
lazy_static = "1.0"
mime_guess="2.0.0-alpha.4"

[dependencies.futures]
version="0.1"
optional=true

[dependencies.futures-await]
version="0.1"
optional=true

[features]
default = ["futures"]
unstable = ["impl-service", "futures-await"]