[package]
name = "impl-service"
version = "0.1.0"
authors = ["seunlanlege <slanlege@c2gconsulting.com>"]
license-file ="../LICENSE"
description = "Proc Macro fo deriving the ArcService trait"

[dependencies]
quote = { version = '0.5' }
proc-macro2 = { version = "0.3", features = ["nightly"] }


[lib]
proc-macro = true

[dependencies.syn]
version = '0.13'
features = ["full", "fold", "parsing", "printing", "extra-traits"]
default-features = false
