[package]
name = "impl-service"
version = "0.1.4"
authors = ["seunlanlege <slanlege@c2gconsulting.com>"]
license-file ="../LICENSE"
description = "Proc Macro fo deriving the ArcService trait"

[dependencies]
quote = { version = "0.6.4" }
proc-macro2 = { version = "0.4.9", features = ["nightly"] }


[lib]
proc-macro = true

[dependencies.syn]
version = "0.14"
features = ["full", "fold", "parsing", "printing", "extra-traits", "proc-macro"]
default-features = false
