[package]
name = "escape"
version = "0.1.0"
authors = ["Tochukwu Nkemdilim <nkemdilimtochukwu@gmail.com>"]

[dependencies]
r2d2 = "0.8.2"
r2d2-diesel = "1.0"
diesel = { version = "1.1.0", features = ["mysql"] }
diesel_infer_schema = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"
lazy_static = "1.0"
futures-cpupool = "0.1.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
arc-reactor = { git = "https://github.com/SeunLanLege/arc-reactor", rev="4e7de3c05c" }