[package]
name = "diesel_integration"
version = "0.1.0"
authors = ["Seun LanLege <seunlanlege@gmail.com>"]

[dependencies]
arc-reactor = { path="../../", version="*" }
r2d2 = "0.8.2"
r2d2-diesel = "1.0"
diesel = { version = "1.1.0", features = ["postgres"] }
dotenv = "0.9.0"
lazy_static = "1.0"
futures-cpupool = "0.1.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio="0.1"